@@ -55,6 +55,7 @@ public:
 	int stream(struct evhttp_request *req);
 
 	int pub(struct evhttp_request *req, bool encoded);
+	int broadcast(struct evhttp_request *req);
 	int sign(struct evhttp_request *req);
 	int close(struct evhttp_request *req);
 	int clear(struct evhttp_request *req);
